# Daily-Work-Automation

./: LICENSE  README.md
skillpack/: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
skillpack/.github/workflows/: ci.yml
skillpack/scripts/: new_skill.py  validate_skills.py
skillpack/skillpack/: __init__.py  cli.py
skillpack/skillpack/skills/: __init__.py  backfill_planner.py  baseline_model_factory.py  containerization.py  cost_regression.py  dag_authoring.py  daily_ops_summary.py  data_quality.py  dbt_generator.py  evaluation_report.py  experiment_queue.py  experiment_tracking.py  fastapi_serving.py  feature_engineering.py  git_workflow.py  hyperparameter_search.py  iac_boilerplate.py  list_skills.py  monitoring_drift.py  notebook_to_package.py  pipeline_doctor.py  pr_summary.py  profile_dataset.py  project_scaffolding.py  quality_gate.py  refactor_skill.py  schema_diff.py  sql_refiner.py  test_writer.py
skillpack/skillpack/utils/: __init__.py  config.py  logging.py  output.py  skill_loader.py
skillpack/skills/backfill_planner/: metadata.yaml  skill.md
skillpack/skills/baseline_model_factory/: metadata.yaml  skill.md
skillpack/skills/containerization/: metadata.yaml  skill.md
skillpack/skills/cost_regression/: metadata.yaml  skill.md
skillpack/tests/: __init__.py  test_data_quality.py  test_dbt_generator.py  test_git_workflow.py  test_phase1_skills.py  test_phase2_skills.py  test_phase3_skills.py  test_phase4_skills.py  test_pr_summary.py  test_profile_dataset.py  test_project_scaffolding.py  test_quality_gate.py  test_schema_diff.py  test_skill_loader.py  test_sql_refiner.py
(+89 files in other folders)
